@@ -1,6 +1,8 @@
 1.2.1
 -----
 1. Ignore clicks on search header if all values for that field are being shown.
+2. Allow add-all/play-all from 'trackinfo', as Spotty's 'Top Titles' access via
+   'More' needs this
 
 1.2.0
 -----
